--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Small Quiz</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="reset.css"/>
 </head>
 <body>
-    <div id="quiz"></div>
-    <button id="submit">Submit</button>
-    <div id="result"></div>
+    <h1 id="title">퀴즈퀴즈</h1>
+
+    <div class="quiz-container">
+        <div id="quiz"></div>
+    </div>
+    
+    <div class="quiz-ctrl">
+        <button id="back" class="quiz-btn">이전</button>
+        <button id="next" class="quiz-btn">다음</button>
+        <button id="submit">제출</button>
+        
+        <div id="result"></div>
+    </div>
+   
 
     <script src="index.js"></script>
 </body>
